--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
                   <div class="map-container">
                       <img src="images/images-world-map.png">
                       <div class="point germany" data-tippy-content="Germany"></div>
+                     <div class="point singapore" data-tippy-content="Singapore"></div>
                   </div>
               </div>
           </div>
